flapivor/tests/m1/hopix/parser/good/79-application-3.hopix
val beta = (fun (x) => x) (0)