flapivor/tests/m1/hopix/parser/bad/98-if-then-else-3.hopix
val sequence =
  if x =? 0 then foo ()
  else if x <? 0 then bar ();
  else if x >? 0 then baz ()
  else live ()